# local-search-rs

./: Cargo.toml  README.md
src/: TODOS.md  config.rs  main.rs  search_model.rs  theme.rs
