[package]
name = "local-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
platform-dirs = "0.3.0"
raylib = "5.5.1"
rust-fontconfig = "1.2.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
toml = "0.9.10"
wincode = {version = "0.2.5", features = ["derive"]}
xml = "1.2.0"
